Update Pop Up 4

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             -webkit-transform: translate(-50%, -50%);
             -ms-transform: translate(-50%, -50%);
             transform: translate(-50%, -50%);
-            max-width: 785px;
+            max-width: 750px;
             width: 100%;
             border: 1px solid #ddd;
             border-radius: 4px;
@@ -76,15 +76,18 @@
             font-weight: 700;
             margin-bottom: 20px;
             color: #00395C;
+            text-align: center;
         }
 
         .inner p {
             font-size: 18px;
             margin-bottom: 0;
+            text-align: justify;
         }
         .inner span {
             font-size: 12px;
             display: block;
+            text-align: center;
         }
 
         .button-wrapper {
@@ -97,7 +100,8 @@
             text-decoration: none;
             background: #00395c;
             color: #fff;
-            padding: 8px 16px;
+            padding: 5px 8px;
+            font-size: 14px;
             border-radius: 4px;
         }
 
@@ -125,11 +129,10 @@
             }
 
             .inner span {
-                font-size: 10px;
+                font-size: 14px;
             }
 
             .button-wrapper a {
-                padding: 6px 16px;
                 border-radius: 2px;
                 font-size: 14px;
             }
@@ -147,6 +150,10 @@
             .inner p {
                 font-size: 14px;
             }
+
+            .inner span {
+                font-size: 12px;
+            }
         }
     </style>
 </head>
@@ -156,13 +163,10 @@
             <div class="col-100">
                 <div class="inner">
                     <div>
-                        <h1>Upgrade to Gold Today and Receive Free Enrollment Fee</h1>
-                        <p>For a limited time, Guest Members receive a free $2990.00 Gold upgrade and pay just $29.90 monthly. New Gold Members also receive $25.00 each month in bonus rewards.</p>
+                        <h1>Members Free Shipping and Returns</h1>
+                        <p>Members Only Free standard shipping on all purchases Big and small. Note: Large bulky orders will have Multiple Upgrade Options for White Glove delivery at Reduced Members Only rates. Due to increased fuel surcharges and handling fees, minimum items per order may be required. Return restocking fees apply.</p>
                         <hr>
-                        <span>This special promotion entitles new Gold members to $25.00 in rewards deposited monthly in their rewards account. *Member Must be active to qualify. Gold enrollment Fee valued at $2990.00.</span>
-                        <div class="button-wrapper">
-                            <a href="#">LEARN MORE</a>
-                        </div>
+                        <span>*Free standard shipping applies to the base charge on all orders and is automatically applied at checkout. Some exclusions apply. MembersDirect® reserves the right to change our S&H policies at any time. We DO NOT ship to AK, HI, or Canada.</span>
                     </div>
                 </div>
             </div>
